# STRUCK

./: .gitignore  CMakeLists.txt  README.md  cmake  config.txt
src/: ImageRep.cpp  LaRank.h  RawFeatures.h
src/struck/: Kernels.h  LaRank.cpp  RawFeatures.cpp  Tracker.cpp  Tracker.h  main.cpp
src/struck/GraphUtils/: GraphUtils.cpp
